[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyunreal"
version = "0.1.0"
description = "Pythonic wrapper for Unreal Engine Python API - PyMEL for Unreal"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    { name = "Nathan Comes" },
]
keywords = ["unreal", "unreal-engine", "tech-art", "anim-blueprint", "python"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Topic :: Multimedia :: Graphics :: 3D Modeling",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "sphinx",
]

[project.urls]
Homepage = "https://github.com/ncomes/pyunreal"
Documentation = "https://mcaeditor.com/docs/pyunreal/"
Repository = "https://github.com/ncomes/pyunreal"

[tool.setuptools.packages.find]
include = ["pyunreal*"]
exclude = ["tests*", "examples*"]
